fix: button font size and spacing

--- a/css/_buttons.scss
+++ b/css/_buttons.scss
@@ -23,7 +23,8 @@
     color: $blue-400;
     text-align: center;
     font-family: postino-std;
-    font-size: 3rem;
+    font-size: 2rem;
+    padding-top: 1rem;
     font-weight: 500;
     line-height: 1.3;
     aspect-ratio: 2;
